Add warning messaage for training registration

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -62,8 +62,8 @@
     "This action is unauthorized.": "Tindakan ini tidak sah.",
     "All settings have been successfully saved.": "Semua pengaturan telah berhasil disimpan.",
     "Data filled above is true and can be accounted for.": "Data yang diisi di atas adalah benar dan dapat dipertanggungjawabkan.",
-    "To complete this submission, please complete the payment.": "Untuk menyelesaikan pengajuan ini, silahkan lengkapi pembayaran.",
-    "To complete this registration, please complete payment.": "Untuk menyelesaikan pendaftaran ini, silahkan lengkapi pembayaran.",
+    "To complete this submission, please complete the payment.": "Untuk menyelesaikan pengajuan ini, silahkan selesaikan pembayaran.",
+    "To complete this registration, please complete payment.": "Untuk menyelesaikan pendaftaran ini, silahkan selesaikan pembayaran.",
     "Please wait for our approval for this submission.": "Silahkan tunggu persetujuan dari kami untuk pengajuan ini.",
 
     "Home": "Beranda",
@@ -390,6 +390,14 @@
     "No punctuation or comma or strip. 10 digits minimum.": "Tanpa tanda baca titik/koma/strip. Minimal 10 digit.",
     "Only 1 department is permitted. Don't use commas.": "Hanya 1 jurusan yang diizinkan. Jangan gunakan tanda koma.",
     "Only industry visit dates can be changed.": "Hanya tanggal kunjungan industri yang dapat diubah.",
+    "Leave zero to deactive this prices." : "Tinggalkan nol untuk menonaktifkan harga ini.",
+    "Limit by school level" : "Batas dengan level sekolah",
+    "Limit by school implementation" : "Batas dengan jurusan sekolah",
+    "Additional participant price" : "Harga peserta tambahan ",
+    "Leave blank to deactivate additional participants or fill in zero to make it free." : "Biarkan kosong untuk menonaktifkan peserta tambahan atau isi nol untuk membuatnya gratis.",
+    "Leave blank to deactive registration out of the conditions or fill in zero to make it free." : "Biarkan kosong untuk menonaktifkan pendaftaran diluar condisi yang ditentukan atau isi nol untuk membuatnya gratis.",
+    "School Based Limitation" : "Batasan Berbasis Sekolah",
+    "School implementation Limitation" : "Batasan implementasi sekolah",
 
     "File must have extension *.ZIP/*.RAR with size 5 MB or less.": "File harus berektensi *.ZIP/*.RAR dengan ukuran 5 MB atau kurang.",
     "Don't compress photos on RAR/ZIP. Because, some photos can be uploaded at once. Maximum size is 5 MB per file.": "Jangan satukan foto menjadi RAR/ZIP. Karena, beberapa foto dapat diunggah sekaligus. Ukuran maksimal 5 MB per berkas.",
@@ -410,17 +418,9 @@
     "Please try again at ": "Silahkan coba lagi pada pukul ",
     "Your school does not meet the requirements and / or do not have teachers.": "Sekolah anda tidak memenuhi persyaratan dan / atau tidak memiliki guru.",
     "Your school does not meet the requirements and / or has not added teachers to the system.": "Sekolah anda tidak memenuhi persyaratan dan atau belum menambahkan guru ke sistem.",
+    "Please check your e-mail for more information.": "Silakan periksa email anda untuk informasi lebih lanjut.",
 
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
-
-    "Leave zero to deactive this prices." : "Tinggalkan nol untuk menonaktifkan harga ini.",
-    "Limit by school level" : "Batas dengan level sekolah",
-    "Limit by school implementation" : "Batas dengan jurusan sekolah",
-    "Additional participant price" : "Harga peserta tambahan ",
-    "Leave blank to deactivate additional participants or fill in zero to make it free." : "Biarkan kosong untuk menonaktifkan peserta tambahan atau isi nol untuk membuatnya gratis.",
-    "Leave blank to deactive registration out of the conditions or fill in zero to make it free." : "Biarkan kosong untuk menonaktifkan pendaftaran diluar condisi yang ditentukan atau isi nol untuk membuatnya gratis.",
-    "School Based Limitation" : "Batasan Berbasis Sekolah",
-    "School implementation Limitation" : "Batasan implementasi sekolah",
     
     "Required!" : "Wajib Diisi!",
     "English": "Inggris",
