Add permission settings

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -197,6 +197,9 @@
     "Role Settings": "Pengaturan Peran",
     "Permission": "Izin Akses",
     "Role permission settings, such as manage data, CRUD, and approval.": "Pengaturan izin peran, seperti mengelola data, CRUD, dan persetujuan.",
+    "Permission Settings": "Pengaturan Hak Akses",
+    "All About Permission Settings": "Semua Pengaturan Hak Akses",
+    "You can adjust all permission settings here": "Anda dapat mengubah semua pengaturan hak ases disini.",
     "Form": "Formulir",
     "Form settings, such as open or close the form.": "Pengaturan formulir, seperti membuka atau menutup formulir.",
     "Form Settings": "Pengaturan Formulir",
