Add search school into admin dashboard

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -68,6 +68,7 @@
 
     "Home": "Beranda",
     "Dashboard": "Dasbor",
+    "Search School": "Cari Sekolah",
     "Latest Comment": "Komentar Terakhir",
     "Status Movement": "Pergerakan Status",
     "School Status": "Status Sekolah",
