Add alert for permission settings

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -61,6 +61,7 @@
     "You have no related permission.": "Anda tidak memiliki hak akses terkait.",
     "This action is unauthorized.": "Tindakan ini tidak sah.",
     "All settings have been successfully saved.": "Semua pengaturan telah berhasil disimpan.",
+    "Settings saved successfully.": "Pengaturan berhasil disimpan.",
     "Data filled above is true and can be accounted for.": "Data yang diisi di atas adalah benar dan dapat dipertanggungjawabkan.",
     "To complete this submission, please complete the payment.": "Untuk menyelesaikan pengajuan ini, silahkan selesaikan pembayaran.",
     "To complete this registration, please complete payment.": "Untuk menyelesaikan pendaftaran ini, silahkan selesaikan pembayaran.",
