Add grant migration and change UUID traits become more effective

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -424,6 +424,7 @@
     "Your school does not meet the requirements and / or do not have teachers.": "Sekolah anda tidak memenuhi persyaratan dan / atau tidak memiliki guru.",
     "Your school does not meet the requirements and / or has not added teachers to the system.": "Sekolah anda tidak memenuhi persyaratan dan atau belum menambahkan guru ke sistem.",
     "Please check your e-mail for more information.": "Silakan periksa email anda untuk informasi lebih lanjut.",
+    "Your school does not have an implemented department.": "Sekolah anda tidak memiliki jurusan terimplementasi.",
 
     "Ready to provide transportation and accommodation for the MikroTik Trainer team.": "Siap menyediakan transportasi dan akomodasi tim Trainer MikroTik.",
     
