Add grant module into admin guard

--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -170,6 +170,12 @@
     "Bank Account Book": "Buku Tabungan",
     "Deleted Payment Confirmation": "Konfirmasi Pembayaran Terhapus",
 
+    "Grant": "Hibah",
+    "Create Grant Application": "Membuat Pengajuan Hibah",
+    "Edit Grant Application": "Edit Pengajuan Hibah",
+    "Grant Application Detail": "Detail Pengajuan Hibah",
+    "Deleted Grant Application": "Pengajuan Hibah Terhapus",
+
     "User": "Pengguna",
     "Account": "Akun",
     "Create Account": "Membuat Akun",
